--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -35,4 +40,88 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  width: 90%;
+  min-height: 90%;
+  margin: 5px;
+  align-items: center;
+  justify-content: center;
+  border: solid 1px grey;
+  box-shadow: grey 1px 1px 6px 0px;
+  border-radius: 10px;
+  background-color: #282c34;
+  color: white;
+}
+
+.container2{
+  display: flex;
+  justify-content: center;
+  width: 75%;
+  border-radius: 10px;
+  background-color: #282c34;
+  color: white;
+}
+
+.section{
+  border: solid 1px grey;
+  padding: 50px;
+  margin:10px;
+  border-radius: 10px;
+  position: relative;
+  flex: 1;
+}
+
+.flex-start{
+  display: flex;
+  justify-content: baseline;
+  align-items: center;
+}
+
+.input{
+  width: 50px;
+  padding: 10px;
+  margin: 5px;
+}
+
+
+.submit{
+  position: absolute;
+  bottom: 15px;
+  right: 75px;
+}
+
+.clear{
+  position: absolute;
+  bottom: 15px;
+  right: 140px;
+}
+
+
+.flex{
+  display: flex;
+  align-items: center;
+}
+.node{
+  background-color: orange;
+  border: solid 1px grey;
+  box-shadow: grey 1px 1px 6px 0px;
+  padding: 20px;
+  margin: 5px;
+  border-radius: 50%;
+}
+
+.node-list{
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: baseline;
+}
+
+.nc-section{
+  padding: 50px;
 }
