--- a/src/App.css
+++ b/src/App.css
@@ -50,9 +50,6 @@
   min-height: 90%;
   margin: 0px;
   align-items: center;
-  border: solid 1px grey;
-  box-shadow: grey 1px 1px 6px 0px;
-  border-radius: 10px;
   background-color: #282c34;
   color: white;
 }
@@ -74,6 +71,9 @@
   border-radius: 10px;
   position: relative;
   flex: 1;
+  border: solid 1px grey;
+  box-shadow: grey 1px 1px 6px 0px;
+  border-radius: 10px;
 }
 
 .flex-start{
@@ -125,3 +125,21 @@
 .nc-section{
   padding: 50px;
 }
+
+
+@media (max-width: 1400px) { 
+    .container2{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .container{
+      border: none;
+      box-shadow:none;
+      border-radius: 0px;
+      background-color: #282c34;
+      color: white;
+      display: flex;
+      justify-content: baseline;
+    }
+ }
